--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="logo.png" alt="Logo" style="height: 40px;"></a>
+      <a class="navbar-brand" href="#"><img src="logo.png" alt="Logo" style="height: 80px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -187,7 +187,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="ChatGPT Image 10 abr 2025, 08_57_53 p.m..png" class="d-block w-100" alt="...">
+              <img src="WhatsApp Image 2025-06-11 at 4.59.15 PM.jpeg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
               <div class="ratio ratio-16x9">
@@ -198,7 +198,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="ChatGPT Image 10 abr 2025, 08_57_53 p.m..png" class="d-block w-100" alt="...">
+              <img src="WhatsApp Image 2025-06-11 at 5.52.13 PM.jpeg" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
